[gd_scene load_steps=2 format=3 uid="uid://bybk7oysngwbb"]

[ext_resource type="Script" uid="uid://c0cxlo1hy3dcp" path="res://scripts/ui/main_menu/main_menu.gd" id="1_1ch07"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ch07")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(132, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -20.0
offset_right = 44.5
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="SinglePlayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Single Player"

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"
